--- a/WebContent/restaurantes.xhtml
+++ b/WebContent/restaurantes.xhtml
@@ -2,11 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html"> 
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:p="http://primefaces.org/ui"> 
 	
 	<body> 
 		<ui:composition>
-			Teste
+			<p:dataTable var="restaurante" value="#{restauranteController.restaurantes}">
+			    <p:column headerText="Nome" style="text-align: left;">
+			        <h:outputText value="#{restaurante.nome}" />
+			    </p:column>
+			</p:dataTable>
 		</ui:composition>
 	</body> 
 </html>
