--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -24,8 +24,8 @@
 	<h:body>
 		<h:form>
 			<p:menubar id="menu">
-				<p:menuitem value="Votações" actionListener="#{homeController.setPage('votacoes')}" update=":content"/>
-				<p:menuitem value="Restaurantes" actionListener="#{homeController.setPage('restaurantes')}" update=":content"/>
+				<p:menuitem value="Votações" icon="ui-icon-comment" actionListener="#{homeController.setPage('votacoes')}" update=":content"/>
+				<p:menuitem value="Restaurantes" icon="ui-icon-home" actionListener="#{homeController.setPage('restaurantes')}" update=":content"/>
 			</p:menubar>
 			
 			<p:sticky target="menu" />
