--- a/WebContent/usuarios.xhtml
+++ b/WebContent/usuarios.xhtml
@@ -19,12 +19,15 @@
 		<br/>
 		
 		<h:form id="formActionMenu">
-			<div style="text-align: left; margin-right: 5px;">
+			<div id="buttons">
 				<p:commandButton id="btnCriar" value="Criar" type="submit" icon="ui-icon-plusthick" onclick="showDialog()" update="frmUsuario" style="margin-right: 5px;">
 					<f:actionListener binding="#{usuarioController.setAction('CREATE')}"/>
 					<f:actionListener binding="#{usuarioController.mountUsuario()}"/>
 				</p:commandButton>
 				<p:commandButton id="btnExcluir" value="Excluir" type="submit" icon="ui-icon-closethick" action="#{usuarioController.deleteSelectedUsuarios}" update="frmUsuarios:dtUsuarios @this" disabled="#{not usuarioController.isExcluirEnabled()}"/>
+			</div>
+			<div id="title">
+				Usuários
 			</div>
 		</h:form>
 		
@@ -57,7 +60,7 @@
 				value="#{usuarioController.usuarios}" 
 				selection="#{usuarioController.selectedUsuarios}" 
 				rowKey="#{usuario.id}"
-				rows="20"
+				rows="25"
 				paginator="true"
 				paginatorPosition="bottom"
 				emptyMessage="Nenhum usuário localizado.">
@@ -70,7 +73,7 @@
 			    <p:column headerText="Nome" style="text-align: left; line-height: 25px; border-right-width: 0px">
 					<h:outputText value="#{usuario.nome}" />
 			    </p:column>
-			    <p:column headerText="Ações" width="100" style="text-align: center; border-left-width: 0px">
+			    <p:column width="100" style="text-align: center; border-left-width: 0px">
 			   		<p:commandButton value="Editar" type="submit" icon="ui-icon-pencil" onclick="showDialog()" update="frmUsuario" style="margin-right: 5px;">
 						<f:actionListener binding="#{usuarioController.setAction('UPDATE')}"/>
 						<f:actionListener binding="#{usuarioController.setUsuario(usuario)}"/>
