--- a/WebContent/restaurantes.xhtml
+++ b/WebContent/restaurantes.xhtml
@@ -19,12 +19,15 @@
 		<br/>
 		
 		<h:form id="formActionMenu">
-			<div style="text-align: left; margin-right: 5px;">
+			<div id="buttons">
 				<p:commandButton id="btnCriar" value="Criar" type="submit" icon="ui-icon-plusthick" onclick="showDialog()" update="frmRestaurante" style="margin-right: 5px;">
 					<f:actionListener binding="#{restauranteController.setAction('CREATE')}"/>
 					<f:actionListener binding="#{restauranteController.mountRestaurante()}"/>
 				</p:commandButton>
 				<p:commandButton id="btnExcluir" value="Excluir" type="submit" icon="ui-icon-closethick" action="#{restauranteController.deleteSelectedRestaurantes}" update="frmRestaurantes:dtRestaurantes @this" disabled="#{not restauranteController.isExcluirEnabled()}"/>
+			</div>
+			<div id="title">
+				Restaurantes
 			</div>
 		</h:form>
 		
@@ -53,7 +56,7 @@
 				value="#{restauranteController.restaurantes}" 
 				selection="#{restauranteController.selectedRestaurantes}" 
 				rowKey="#{restaurante.id}"
-				rows="20"
+				rows="25"
 				paginator="true"
 				paginatorPosition="bottom"
 				emptyMessage="Nenhum restaurante localizado.">
@@ -66,7 +69,7 @@
 			    <p:column headerText="Nome" style="text-align: left; line-height: 25px; border-right-width: 0px">
 					<h:outputText value="#{restaurante.nome}" />
 			    </p:column>
-			    <p:column headerText="Ações" width="100" style="text-align: center; border-left-width: 0px">
+			    <p:column width="100" style="text-align: center; border-left-width: 0px">
 			    	<p:commandButton value="Editar" type="submit" icon="ui-icon-pencil" onclick="showDialog()" update="frmRestaurante" style="margin-right: 5px;">
 						<f:actionListener binding="#{restauranteController.setAction('UPDATE')}"/>
 						<f:actionListener binding="#{restauranteController.setRestaurante(restaurante)}"/>
