--- a/WebContent/restaurantes.xhtml
+++ b/WebContent/restaurantes.xhtml
@@ -69,7 +69,7 @@
 			    <p:column headerText="Nome" style="text-align: left; line-height: 25px; border-right-width: 0px">
 					<h:outputText value="#{restaurante.nome}" />
 			    </p:column>
-			    <p:column width="100" style="text-align: center; border-left-width: 0px">
+			    <p:column width="100" style="text-align: right; border-left-width: 0px">
 			    	<p:commandButton value="Editar" type="submit" icon="ui-icon-pencil" onclick="showDialog()" update="frmRestaurante" style="margin-right: 5px;">
 						<f:actionListener binding="#{restauranteController.setAction('UPDATE')}"/>
 						<f:actionListener binding="#{restauranteController.setRestaurante(restaurante)}"/>
