--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -40,11 +40,18 @@
 				color: gray;
 			}
 
+			html {
+				background: url("resources/images/background.jpg")no-repeat center center fixed; 
+				-webkit-background-size: cover;
+				-moz-background-size: cover;
+				-o-background-size: cover;
+				background-size: cover;
+			}
+
 			body {
 				color: #373737;
 				font: 16px arial;
 				line-height: 1;
-				background: url("resources/images/background.jpg");
 			}
 			
 			#buttons {
