--- a/WebContent/votacoes.xhtml
+++ b/WebContent/votacoes.xhtml
@@ -7,6 +7,8 @@
 	
 	<ui:composition>
 	
+		<h:messages globalOnly="true" />
+		
 		<script type="text/javascript">
 			function showDialog(dialogName) {
 				PrimeFaces.widgets[dialogName].show();
