--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -9,7 +9,7 @@
     xmlns:c="http://java.sun.com/jstl/core">
 
 	<h:head>
-		<title>Faminto.com</title>
+		<title>ENOVIA</title>
 		<style>
 			.ui-widget, .ui-widget .ui-widget {
 				font-size: 90% !important;
@@ -41,7 +41,7 @@
 			}
 
 			html {
-				background: url("resources/images/background.jpg")no-repeat center center fixed; 
+				background: #333; 
 				-webkit-background-size: cover;
 				-moz-background-size: cover;
 				-o-background-size: cover;
