--- a/WebContent/votacoes.xhtml
+++ b/WebContent/votacoes.xhtml
@@ -78,18 +78,21 @@
 		    	<p:panel id="panelVoto" header="#{votacaoController.getVotoAction() == 'CREATE' ? 'Votar' : 'Editar Voto'}">
 			        <h:panelGrid columns="2" cellpadding="5">
 		    			<h:outputLabel for="restaurante" value="Restaurante:" />
-		    			<p:selectOneMenu id="restaurante" value="#{votacaoController.voto.restaurante}" converter="#{restauranteConverter}" required="true" filter="true" filterMatchMode="contains" style="width:125px">
+		    			<p:selectOneMenu id="restaurante" value="#{votacaoController.voto.restaurante}" converter="#{restauranteConverter}" required="true" filter="true" filterMatchMode="contains" style="width: 165px">
 		    				<f:selectItem itemLabel="(Selecione)" itemValue="#{null}" noSelectionOption="true" />
 				            <f:selectItems value="#{votacaoController.restaurantes}" var="r" itemLabel="#{r.nome}" itemValue="#{r}"/>
 				        </p:selectOneMenu>
 			        </h:panelGrid>
+			        <p:message for="restaurante" style="margin-bottom: 7px;"/>
 			        <div style="text-align: right; margin-top: 5px">
-				    	<p:commandButton value="Salvar" type="submit" icon="ui-icon-check" action="#{votacaoController.saveVoto()}" update="frmVotacoes:dtVotacoes" onclick="hideDialog('dlgVoto');"/>
+				    	<p:commandButton value="Salvar" type="submit" icon="ui-icon-check" action="#{votacaoController.saveVoto()}" update="frmVotacoes:dtVotacoes @form" oncomplete="if (!args.validationFailed) hideDialog('dlgVoto');"/>
 				    	<p:commandButton value="Fechar" type="button" icon="ui-icon-closethick" onclick="hideDialog('dlgVoto');"/>
 			    	</div>
 			    </p:panel>
 		    </h:form>
 		</p:dialog>
+		
+		<p:ajaxExceptionHandler type="java.lang.IllegalArgumentException" onexception="alert('testee')" />
 	
 		<h:form id="frmVotacoes">
 			<p:dataTable id="dtVotacoes" 
