--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -41,7 +41,7 @@
 			}
 
 			html {
-				background: url("resources/images/background.jpg")no-repeat center center fixed; 
+				background: #333; 
 				-webkit-background-size: cover;
 				-moz-background-size: cover;
 				-o-background-size: cover;
