--- a/WebContent/votacoes.xhtml
+++ b/WebContent/votacoes.xhtml
@@ -78,13 +78,14 @@
 		    	<p:panel id="panelVoto" header="#{votacaoController.getVotoAction() == 'CREATE' ? 'Votar' : 'Editar Voto'}">
 			        <h:panelGrid columns="2" cellpadding="5">
 		    			<h:outputLabel for="restaurante" value="Restaurante:" />
-		    			<p:selectOneMenu id="restaurante" value="#{votacaoController.voto.restaurante}" converter="#{restauranteConverter}" required="true" filter="true" filterMatchMode="contains" style="width:125px">
+		    			<p:selectOneMenu id="restaurante" value="#{votacaoController.voto.restaurante}" converter="#{restauranteConverter}" required="true" filter="true" filterMatchMode="contains" style="width: 165px">
 		    				<f:selectItem itemLabel="(Selecione)" itemValue="#{null}" noSelectionOption="true" />
 				            <f:selectItems value="#{votacaoController.restaurantes}" var="r" itemLabel="#{r.nome}" itemValue="#{r}"/>
 				        </p:selectOneMenu>
 			        </h:panelGrid>
+			        <p:message for="restaurante" style="margin-bottom: 7px;"/>
 			        <div style="text-align: right; margin-top: 5px">
-				    	<p:commandButton value="Salvar" type="submit" icon="ui-icon-check" action="#{votacaoController.saveVoto()}" update="frmVotacoes:dtVotacoes" onclick="hideDialog('dlgVoto');"/>
+				    	<p:commandButton value="Salvar" type="submit" icon="ui-icon-check" action="#{votacaoController.saveVoto()}" update="frmVotacoes:dtVotacoes @form" oncomplete="if (!args.validationFailed) hideDialog('dlgVoto');"/>
 				    	<p:commandButton value="Fechar" type="button" icon="ui-icon-closethick" onclick="hideDialog('dlgVoto');"/>
 			    	</div>
 			    </p:panel>
@@ -97,7 +98,7 @@
 				value="#{votacaoController.votacoes}" 
 				selection="#{votacaoController.selectedVotacoes}" 
 				rowKey="#{votacao.id}"
-				rows="25"
+				rows="15"
 				paginator="true"
 				paginatorPosition="bottom"
 				emptyMessage="Nenhuma votação localizada.">
