--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -9,7 +9,7 @@
     xmlns:c="http://java.sun.com/jstl/core">
 
 	<h:head>
-		<title>Faminto.com</title>
+		<title>ENOVIA</title>
 		<style>
 			.ui-widget, .ui-widget .ui-widget {
 				font-size: 90% !important;
