--- a/WebContent/votacoes.xhtml
+++ b/WebContent/votacoes.xhtml
@@ -91,6 +91,8 @@
 			    </p:panel>
 		    </h:form>
 		</p:dialog>
+		
+		<p:ajaxExceptionHandler type="java.lang.IllegalArgumentException" onexception="alert('testee')" />
 	
 		<h:form id="frmVotacoes">
 			<p:dataTable id="dtVotacoes" 
