--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -12,7 +12,7 @@
 		<title>ENOVIA</title>
 		<style>
 			.ui-widget, .ui-widget .ui-widget {
-				font-size: 90% !important;
+				font-size: 90% !importan;
 			}
 			
 			.ui-dialog .ui-dialog-titlebar {
