--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -9,10 +9,10 @@
     xmlns:c="http://java.sun.com/jstl/core">
 
 	<h:head>
-		<title>ENOVIA</title>
+		<title>Faminto.com</title>
 		<style>
 			.ui-widget, .ui-widget .ui-widget {
-				font-size: 90% !importan;
+				font-size: 90% !important;
 			}
 			
 			.ui-dialog .ui-dialog-titlebar {
